# talk-python-agentic-ai-python

./: LICENSE  README.md
gittyup/: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.py
gittyup/.github/workflows/: ci.yml  release.yml
gittyup/plans/: README.md  implementation-checklist.md  project-plan.md  technical-specification.md
gittyup/src/gittyup/: __init__.py  __main__.py  cli.py  exceptions.py
gittyup/src/gittyup/config/: __init__.py  defaults.py  loader.py
gittyup/src/gittyup/core/: __init__.py  executor.py  models.py  reporter.py  repository_info.py  scanner.py
gittyup/src/gittyup/utils/: __init__.py  color.py  git_utils.py  path_utils.py
gittyup/tests/: conftest.py
gittyup/tests/integration/: __init__.py  test_cli.py  test_end_to_end.py
gittyup/tests/unit/: __init__.py  test_executor.py  test_git_utils.py  test_models.py  test_reporter.py  test_repository_info.py  test_scanner.py  test_utils.py
